--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "node scripts/clean.js",
+    "clean:win": "scripts\\clean.bat",
+    "reset": "npm run clean && npm install && npm run dev"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "^14.2.31",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
