--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "reset": "npm run clean && npm install && npm run dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.54.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
     "next": "^14.2.31",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.16",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
