--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "reset": "npm run clean && npm install && npm run dev"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
