--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next": "^14.2.31",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.16",
     "zustand": "^5.0.7"
@@ -32,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
